gcc/testsuite/rust/rustc/ui/parser/issues/issue-87694-duplicated-pub_dg.rs
pub const pub fn test() {}
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-note "" "" { target *-*-* } .-2 }
// { help "" "" { target *-*-* } .-3 }
// { dg-note "" "" { target *-*-* } .-4 }

